--- a/app/src/main/res/layout/activity_tween.xml
+++ b/app/src/main/res/layout/activity_tween.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.adouble.animatondemo.TweenActivity">
+    tools:context=".baseanimate.TweenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
